Wed Dec 26 17:45:49 2001  George Lebl <jirka@5z.com>

	* gnome-panel-screenshot.c, menu.c, panel.c, panel-util.c,
	  panel-widget.c:  I'm a dubmass!  GdkCursor is NOT a GObject

	* foobar-widget.c:  a bit of cleanup

Wed Dec 26 16:25:50 2001  George Lebl <jirka@5z.com>

	* Makefile.am, basep-widget.c, button-widget.c, foobar-widget.c,
	  global-keys.c, gnome-panel-properties.c, gnome-panel-screenshot.c,
	  gnome-run.c, launcher.c, main.c, menu.c, nothing.cP, panel-util.c,
	  panel-widget.c, panel.c, rgb-stuff.c, xstuff.c:  Compile also
	  with GDK_DISABLE_DEPRECATED and GDK_PIXBUF_DISABLE_DEPRECATED,
	  and all except gnome-run.c with GTK_DISABLE_DEPRECATED

	* foobar-widget.c: always convert to utf8 after getting something
	  from strftime

Wed Dec 26 14:01:24 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c: fix width of clock label.  Now if the time
	  'grows' beyond initial size then the label grows as well (it never
	  shrinks horizontally though, unless you change the format)

	* nothing.cP: we need pause

Wed Dec 26 12:03:37 2001  George Lebl <jirka@5z.com>

	* panel-gconf.c: fix default return for get_string

	* nothing.cP: a bit more evil was required here

Tue Dec 25 16:13:56 2001  George Lebl <jirka@5z.com>

	* nothing.cP: some more evil

Tue Dec 25 15:51:27 2001  George Lebl <jirka@5z.com>

	* gnome-run.c, nothing.cP, nothing.h: Since I suppose one shouldn't
	  be productive during christmass to not seem like a loser, I wasn't
	  actually productive.  GEGLs ARE INVADING!

	* menu.c: cosmetic change

Mon Dec 24 01:55:19 2001  George Lebl <jirka@5z.com>

	* panel.c, panel-util.[ch]: deal with dropped uris a tad better and
	  actually use gnome-vfs more.  Still kind of stupid and needs more
	  work, but better then before.  We should now again handle drops
	  from the menus since those were not from a 'file:' uri's.  Also
	  drop the shell quoting routine since we already have that in glib.

	* panel-widget.c: a bit of constization
